--- a/models/staging/happity/src_happity.yml
+++ b/models/staging/happity/src_happity.yml
@@ -13,6 +13,10 @@ sources:
         loaded_at_field: _airbyte_emitted_at
         freshness:
           error_after: {count: 24, period: hour}
+      - name: promotions
+        loaded_at_field: _airbyte_emitted_at
+        freshness:
+          error_after: {count: 24, period: hour}
       - name: users_scd
         loaded_at_field: _airbyte_emitted_at
         freshness:
@@ -21,6 +25,12 @@ sources:
         loaded_at_field: _airbyte_emitted_at
         freshness:
           error_after: {count: 24, period: hour}
+      - name: schedules_scd
+        loaded_at_field: _airbyte_emitted_at
+        freshness:
+          error_after: {count: 24, period: hour}
+      - name: activities_scd
+        loaded_at_field: _airbyte_emitted_at
       - name: events
         loaded_at_field: _airbyte_emitted_at
         freshness:
@@ -30,6 +40,10 @@ sources:
         freshness:
           error_after: {count: 24, period: hour}
       - name: providers_scd
+        loaded_at_field: _airbyte_emitted_at
+        freshness:
+          error_after: {count: 24, period: hour}
+      - name: companies
         loaded_at_field: _airbyte_emitted_at
         freshness:
           error_after: {count: 24, period: hour}
