--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -13,7 +13,7 @@ sources:
         loaded_at_field: _airbyte_emitted_at
         freshness:
           error_after: {count: 24, period: hour}
-      - name: subscription_items
+      - name: invoices
         loaded_at_field: _airbyte_emitted_at
         freshness:
           error_after: {count: 24, period: hour}
@@ -21,4 +21,10 @@ sources:
         loaded_at_field: _airbyte_emitted_at
         freshness:
           error_after: {count: 24, period: hour}
-      
+  - name: stripe_manual
+    database: fifth-battery-131115
+    schema: stripe_manual
+    tables:
+      - name: plans
+      - name: products
+        
